Corrected typos, extended config examples, cmds executing added

--- a/afancontrol.cfg
+++ b/afancontrol.cfg
@@ -30,6 +30,9 @@ fans_speed_check_interval = 3
 [actions]
 # Shell command which will be used to report important events.
 # %REASON% will be replaced with report reason, %MESSAGE% with report message
+# Examples:
+#  printf "Reason: %s\nMessage: %s" "%REASON%" "%MESSAGE%" | wall
+#  kdialog --title "afancontrol report" --error "Reason: %REASON%\nMessage: %MESSAGE%"
 # Default: printf "Subject: %s\nTo: %s\n\n%b" "afancontrol daemon report: %REASON%" root "%MESSAGE%" | sendmail -t
 ;report_cmd =
 
