Add config parser (the code is ugly but working)

--- a/afancontrol.cfg
+++ b/afancontrol.cfg
@@ -24,7 +24,7 @@ interval = 5
 fans_speed_check_interval = 3
 
 # Hddtemp location
-# Default: `which hddtemp`
+# Default: hddtemp
 ;hddtemp =
 
 [actions]
@@ -146,7 +146,7 @@ never_stop = yes
 # Comma-separated list of fans for this mapping. fans names might be multiplied by float.
 # Example: name * 0.55. This means that speed for that fan will be just 55%.
 # You may need this if you want to make input and output air flow equal using different fans
-# Mandatiry
+# Mandatory
 fans = cpu, hdd*0.6,
 
 # Comma-separated list of temperatures. Fans in this mapping will run at maximum speed required from these temps.
