Add `app` -- the main entrypoint + daemonizing + signals processing

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,10 @@ packages =
     afancontrol
 python_requires = >=3.5
 
+[options.entry_points]
+console_scripts =
+    afancontrol = afancontrol.__main__:main
+
 [options.extras_require]
 dev =
     black==18.9b0; python_version>='3.6'
