Fix `make lint` errors

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,9 +15,12 @@ exclude_lines =
 [flake8]
 ; E203 -- ignore whitespace in slices. See https://github.com/ambv/black#slices
 ; W503 line break before binary operator
+; C901 '***' is too complex (10)
 ignore = E203,W503
 max-complexity = 9
 max-line-length = 90
+per-file-ignores =
+    afancontrol/config.py:C901
 
 [isort]
 ; https://github.com/timothycrosley/isort#multi-line-output-modes
