Move `afancontrol` to `src/afancontrol`

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [coverage:run]
 branch = True
 source =
-    afancontrol
+    src
     tests
 
 [coverage:report]
@@ -20,7 +20,7 @@ ignore = E203,W503
 max-complexity = 9
 max-line-length = 90
 per-file-ignores =
-    afancontrol/config.py:C901
+    src/afancontrol/config.py:C901
 
 [isort]
 ; https://github.com/timothycrosley/isort#multi-line-output-modes
@@ -40,8 +40,9 @@ ignore_missing_imports = True
 
 [options]
 include_package_data = True
-packages =
-    afancontrol
+package_dir =
+    = src
+packages = find:
 python_requires = >=3.5
 
 [options.entry_points]
@@ -57,6 +58,9 @@ dev =
     mypy==0.641
     pytest==3.8.1
     wheel
+
+[options.packages.find]
+where = src
 
 [tool:pytest]
 log_level = INFO
