--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,21 @@ not_skip = __init__.py
 
 [metadata]
 name = afancontrol
+classifier =
+    Development Status :: 4 - Beta
+    Intended Audience :: System Administrators
+    License :: OSI Approved :: MIT License
+    Natural Language :: English
+    Operating System :: POSIX :: Linux
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Topic :: System :: Hardware
+    Topic :: System :: Monitoring
+    Topic :: System :: Systems Administration
 
 [mypy-pytest.*]
 ignore_missing_imports = True
