tox.ini: fix zero coverage

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,9 @@ extras =
     dev
 whitelist_externals = make
 commands = make test
+; Fix coverage not working because tox doesn't install
+; sources to the working dir by default.
+usedevelop = True
 
 [testenv:lint]
 basepython = python3
