Add metrics support via prometheus exporter

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,9 @@ classifier =
     Topic :: System :: Monitoring
     Topic :: System :: Systems Administration
 
+[mypy-prometheus_client.*]
+ignore_missing_imports = True
+
 [mypy-pytest.*]
 ignore_missing_imports = True
 
@@ -66,6 +69,8 @@ console_scripts =
     afancontrol_fantest = afancontrol.fantest:main
 
 [options.extras_require]
+metrics =
+    prometheus-client
 dev =
     black==19.3b0; python_version>='3.6'
     coverage==4.5.3
@@ -73,6 +78,7 @@ dev =
     isort==4.3.17
     mypy==0.701
     pytest==4.4.1
+    requests
     wheel
 
 [options.packages.find]
