Enable mypy's check_untyped_defs

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,9 @@ classifier =
     Topic :: System :: Monitoring
     Topic :: System :: Systems Administration
 
+[mypy]
+check_untyped_defs = True
+
 [mypy-prometheus_client.*]
 ignore_missing_imports = True
 
