Add prometheus_client to tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,10 @@
 [tox]
-envlist=py{35,36,37,38},lint,check-docs
+envlist=py{35,36,37,38},py35-metrics,lint,check-docs
 
 [testenv]
 extras =
     dev
+    metrics: metrics
 whitelist_externals = make
 commands = make test
 ; Fix coverage not working because tox doesn't install
