Add support for PWM fans via Arduino

--- a/afancontrol.cfg
+++ b/afancontrol.cfg
@@ -141,13 +141,24 @@ pwm_line_start = 100
 pwm_line_end = 240
 never_stop = yes
 
+[arduino: mymicro]
+serial_url = /dev/cu.usbmodem14201
+baudrate = 115200
+status_ttl = 5
+
+[fan: my_arduino_fan]
+type = arduino
+arduino_name = mymicro
+pwm_pin = 9
+tacho_pin = 3
+
 # Relations between fans and temps
 [mapping:1]
 # Comma-separated list of fans for this mapping. fans names might be multiplied by float.
 # Example: name * 0.55. This means that speed for that fan will be just 55%.
 # You may need this if you want to make input and output air flow equal using different fans
 # Mandatory
-fans = cpu, hdd*0.6,
+fans = cpu, hdd*0.6, my_arduino_fan
 
 # Comma-separated list of temperatures. Fans in this mapping will run at maximum speed required from these temps.
 temps = mobo, hdds
