--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
-envlist=py{35,36,37,38},py35-metrics,lint,check-docs
+envlist=py{35,36,37,38}{,-arduino,-metrics},lint,check-docs
 
 [testenv]
 extras =
+    arduino: arduino
     dev
     metrics: metrics
 whitelist_externals = make
@@ -12,6 +13,10 @@ commands = make test
 usedevelop = True
 
 [testenv:lint]
+extras =
+    arduino
+    dev
+    metrics
 basepython = python3
 ; Use `pip install -e .` so isort would treat imports from this package
 ; as first party imports instead of third party:
