--- a/setup.cfg
+++ b/setup.cfg
@@ -59,6 +59,9 @@ ignore_missing_imports = True
 [mypy-pytest.*]
 ignore_missing_imports = True
 
+[mypy-serial.*]
+ignore_missing_imports = True
+
 [options]
 include_package_data = True
 package_dir =
@@ -72,6 +75,8 @@ console_scripts =
     afancontrol_fantest = afancontrol.fantest:main
 
 [options.extras_require]
+arduino =
+    pyserial>=3.0
 metrics =
     prometheus-client
 dev =
