Switch from argparse to click

--- a/setup.cfg
+++ b/setup.cfg
@@ -64,6 +64,8 @@ ignore_missing_imports = True
 
 [options]
 include_package_data = True
+install_requires =
+    click>=6
 package_dir =
     = src
 packages = find:
