Switch `fantest` from `read_stdin` to `click`

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ max-complexity = 9
 max-line-length = 90
 per-file-ignores =
     src/afancontrol/config.py:C901
+    src/afancontrol/fantest.py:C901
 
 [isort]
 ; https://github.com/timothycrosley/isort#multi-line-output-modes
