setup.cfg: add more metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,8 @@ line_length = 88
 not_skip = __init__.py
 
 [metadata]
-name = afancontrol
+author = Kostya Esmukov
+author_email = kostya@esmukov.ru
 classifier =
     Development Status :: 4 - Beta
     Intended Audience :: System Administrators
@@ -50,6 +51,10 @@ classifier =
     Topic :: System :: Hardware
     Topic :: System :: Monitoring
     Topic :: System :: Systems Administration
+description = Advanced fancontrol daemon
+long_description = file: README.md
+name = afancontrol
+url = https://github.com/KostyaEsmukov/afancontrol
 
 [mypy]
 check_untyped_defs = True
