Configs: specify Arduino Serial url in examples as seen on Linux instead of macos

--- a/afancontrol.conf
+++ b/afancontrol.conf
@@ -23,6 +23,9 @@ interval = 5
 # Default: hddtemp
 ;hddtemp =
 
+# Default: None
+;exporter_listen_host = 127.0.0.1:8083
+
 [actions]
 # Shell command which will be used to report important events.
 # %REASON% will be replaced with report reason, %MESSAGE% with report message
@@ -138,7 +141,7 @@ pwm_line_end = 240
 never_stop = yes
 
 [arduino: mymicro]
-serial_url = /dev/cu.usbmodem14201
+serial_url = /dev/ttyACM0
 baudrate = 115200
 status_ttl = 5
 
