--- a/pkg/afancontrol.conf
+++ b/pkg/afancontrol.conf
@@ -7,6 +7,9 @@ logfile = /var/log/afancontrol.log
 # Default: 5
 interval = 5
 
+# Default: None
+;exporter_listen_host = 127.0.0.1:8083
+
 [actions]
 # Shell command which will be used to report important events.
 # %REASON% will be replaced with report reason, %MESSAGE% with report message
@@ -122,7 +125,7 @@ interval = 5
 ;never_stop = yes
 
 ;[arduino: mymicro]
-;serial_url = /dev/cu.usbmodem14201
+;serial_url = /dev/ttyACM0
 ;baudrate = 115200
 ;status_ttl = 5
 
