Config parser: strip spaces around fan name and speed modifier in mappings

--- a/afancontrol.conf
+++ b/afancontrol.conf
@@ -157,7 +157,7 @@ tacho_pin = 3
 # Example: name * 0.55. This means that speed for that fan will be just 55%.
 # You may need this if you want to make input and output air flow equal using different fans
 # Mandatory
-fans = cpu, hdd*0.6, my_arduino_fan
+fans = cpu, hdd*0.6, my_arduino_fan * 0.222
 
 # Comma-separated list of temperatures. Fans in this mapping will run at maximum speed required from these temps.
 temps = mobo, hdds
