--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -7,7 +7,8 @@ RUN apt-get update \
         build-essential \
         debhelper \
         devscripts \
-        python3
+        python3 \
+        vim-tiny
 
 # https://github.com/inversepath/usbarmory-debian-base_image/issues/9#issuecomment-451635505
 RUN mkdir ~/.gnupg && echo "disable-ipv6" >> ~/.gnupg/dirmngr.conf
