Write up a new readme in rst

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,7 @@ classifier =
     Topic :: System :: Monitoring
     Topic :: System :: Systems Administration
 description = Advanced fancontrol daemon
-long_description = file: README.md
+long_description = file: README.rst
 name = afancontrol
 url = https://github.com/KostyaEsmukov/afancontrol
 
