Raise coveragepy's `fail_under` to 60

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,9 @@ source =
 
 [coverage:report]
 show_missing = True
-fail_under = 10
+# The total coverage is higher, but when running tests without extras,
+# not all code is being tested, thus the coverage is lower.
+fail_under = 60
 exclude_lines =
     @abc.abstractmethod
     @abc.abstractproperty
