--- a/pkg/afancontrol.conf
+++ b/pkg/afancontrol.conf
@@ -24,7 +24,7 @@ interval = 5
 # is activated. Same for the `panic` mode.
 #
 # When any of the 2 modes is activated, all of the available fans would start
-# working on full speed.
+# working at full speed.
 #
 # In the default configuration there's no difference between the two modes.
 # But it is possible to call different shell commands for each mode, which
