Fix tox incompatible with py39 due to `virtualenv` usage instead on `-m venv`

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
   allow_failures:
     - python: "3.9-dev"
 
-install: pip install tox-travis tox
+install: pip install tox-travis tox tox-venv
 
 # Used by the `test` stage.
 script: tox
