Update setuptools within tox to fix py35 build

--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,10 @@
 envlist=py{35,36,37,38,39}{,-arduino,-metrics},lint,check-docs
 
 [testenv]
+deps =
+; Python 3.5 still ships an old setuptools version which doesn't support
+; declarative setup.cfg format.
+    setuptools>=41.4.0
 extras =
     arduino: arduino
     dev
