Change debian package release from stretch to unstable
afancontrol is a pure python package, so the resulting dpkg should
work fine on all Debian flavors.

--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -1,6 +1,6 @@
-# Docker image for building an `afancontrol` package for Debian Stretch.
+# Docker image for building an `afancontrol` package for Debian.
 
-FROM debian:stretch
+FROM debian:unstable
 
 RUN apt-get update \
     && apt-get install -y \
