Move PID file under /run It fixes the following error: /usr/lib/systemd/system/afancontrol.service:9: PIDFile= references a path below legacy directory /var/run/, updating /var/run/afancontrol.pid → /run/afancontrol.pid; please update the unit file accordingly.
/run is the standard path since FHS 3.0

--- a/pkg/afancontrol.conf
+++ b/pkg/afancontrol.conf
@@ -1,6 +1,6 @@
 [daemon]
-# Default: /var/run/afancontrol.pid
-pidfile = /var/run/afancontrol.pid
+# Default: /run/afancontrol.pid
+pidfile = /run/afancontrol.pid
 
 # Default: (empty value)
 logfile = /var/log/afancontrol.log
