--- a/pkg/afancontrol.service
+++ b/pkg/afancontrol.service
@@ -5,8 +5,8 @@ After=lm-sensors.service
 [Service]
 LimitNOFILE=8192
 ExecStartPre=/usr/bin/afancontrol daemon --test
-ExecStart=/usr/bin/afancontrol daemon --pidfile /var/run/afancontrol.pid
-PIDFile=/var/run/afancontrol.pid
+ExecStart=/usr/bin/afancontrol daemon --pidfile /run/afancontrol.pid
+PIDFile=/run/afancontrol.pid
 
 [Install]
 WantedBy=multi-user.target
