--- a/tests/data/afancontrol-example.conf
+++ b/tests/data/afancontrol-example.conf
@@ -1,5 +1,5 @@
 [daemon]
-pidfile = /var/run/afancontrol.pid
+pidfile = /run/afancontrol.pid
 logfile = /var/log/afancontrol.log
 interval = 5
 exporter_listen_host = 127.0.0.1:8083
