Add filters, collect temperatures simultaneously

--- a/pkg/afancontrol.conf
+++ b/pkg/afancontrol.conf
@@ -56,6 +56,34 @@ interval = 5
 # Default: (empty value)
 ;threshold_leave_cmd =
 
+# `[filter:name]` - define a temperature filter. The `name` must be unique.
+[filter: moving_median_p3]
+# Temperature filters can be used to smoothen the observations to avoid
+# rapid fan speed changes.
+#
+# Filter type.
+# Possible values:
+#  `moving_median`: A moving median filter. Useful to ignore inadequately
+#                   large individual measurements from unstable sensors.
+#                   Recommended `window_size` is 3 or 5, because with a too
+#                   large window size a sudden increase in temperature might
+#                   not get a timely fan speed reaction.
+#  `moving_quantile`: A moving quantile filter. Useful to amplify high
+#                     temperatures to make smoother reaction while being
+#                     extra cautious (i.e. tending to assume that
+#                     the actual temperature is higher than the one which
+#                     is being reported). Recommended `window_size` is 10,
+#                     `quantile` is 0.8 or 0.9. It is also possible to invert
+#                     the reaction speed: to make it react slower just use a lower
+#                     quantile value (such as 0.3).
+type = moving_median
+
+# Number of observations kept in the moving window.
+# Default: 3.
+window_size = 3
+
+# Quantile value for the `moving_quantile` filter, mandatory.
+;quantile=0.8
 
 # [temp:name] - is a temperature sensor section. The `name` must be unique.
 [temp:mobo]
@@ -85,6 +113,10 @@ type = file
 path = /sys/class/hwmon/hwmon0/device/temp1_input
 ;path = /sys/devices/pci0000:00/0000:00:01.3/0000:03:00.2/0000:20:08.0/0000:2a:00.0/hwmon/hwmon*/temp1_input
 ;path = /dev/sd?
+
+# Name of the temperature filter.
+# Optional, unfiltered observations will be used if not specified.
+filter = moving_median_p3
 
 # Temperature at which a fan should be running at minimum speed
 # Must be set for `hdd`. Can be detected automatically for `file`
