FileTemp: add support for glob patterns in paths

--- a/pkg/afancontrol.conf
+++ b/pkg/afancontrol.conf
@@ -78,10 +78,12 @@ type = file
 ;command = nvme smart-log /dev/nvme0 | grep "^temperature" | grep -oP '[0-9]+'
 ;command = iStats cpu temp --value-only
 
-# When `type = file`: this is the path to the file.
+# When `type = file`: this is the path to the file. The path might be a glob pattern,
+#                     but it must expand to a single file.
 # When `type = hdd`: this is the path to the target device (might be a glob pattern)
 # Mandatory when `type` equals to `file` or `hdd`.
 path = /sys/class/hwmon/hwmon0/device/temp1_input
+;path = /sys/devices/pci0000:00/0000:00:01.3/0000:03:00.2/0000:20:08.0/0000:2a:00.0/hwmon/hwmon*/temp1_input
 ;path = /dev/sd?
 
 # Temperature at which a fan should be running at minimum speed
