Add `readonly_fan` section, split BasePWMFan into 3 classes

--- a/pkg/afancontrol.conf
+++ b/pkg/afancontrol.conf
@@ -133,7 +133,7 @@ max = 40
 type = linux
 
 # Path to the PWM file of the fan.
-# Mandatory when `type = linux`.
+# Mandatory when `type = linux`, optional in `[readonly_fan: ...]` sections.
 pwm = /sys/class/hwmon/hwmon0/device/pwm2
 
 # Path to the RPM file of the fan.
@@ -146,7 +146,7 @@ fan_input = /sys/class/hwmon/hwmon0/device/fan2_input
 
 # The pin of the Arduino board where the PWM wire is connected to
 # (usually the blue one).
-# Mandatory when `type = arduino`.
+# Mandatory when `type = arduino`, optional in `[readonly_fan: ...]` sections.
 ;pwm_pin = 9
 
 # The pin of the Arduino board where the Tachometer wire is connected to
@@ -160,16 +160,25 @@ fan_input = /sys/class/hwmon/hwmon0/device/fan2_input
 # You can use the `afancontrol fantest` command to run a test which would
 # allow you to find out these values your your specific fans.
 #
-# Default: 100
+# Default: 100. Must not be set in the `[readonly_fan: ...]` sections.
 pwm_line_start = 100
-# Default 240
+# Default 240. Must not be set in the `[readonly_fan: ...]` sections.
 pwm_line_end = 240
 
 # Should the fan be stopped on speed 0% or not. If not, it would be running
 # with the `pwm_line_start` PWM value.
-# Default: yes
+# Default: yes. Must not be set in the `[readonly_fan: ...]` sections.
 never_stop = no
 
+[readonly_fan: cpu]
+# A readonly fan: i.e. just read RPM and never attempt to control it.
+# Useful for exposing a CPU fan speed in metrics.
+#
+# The properties are the same as in `[fan: ...]`. Both sections share
+# the same namespace, which means that a single fan name can be used
+# only in one of the sections.
+type = linux
+fan_input = /sys/class/hwmon/hwmon0/device/fan1_input
 
 # [arduino:name] - a section describing an Arduino board with PWM fans connected to it.
 ;[arduino: mymicro]
@@ -201,6 +210,8 @@ never_stop = no
 #
 # Multiple mappings can be specified, each temp and fan might be used
 # in different mappings multiple times.
+#
+# Readonly fans cannot be used in mappings.
 #
 # The resulting fan speed would be the maximum value calculated along
 # all mappings.
