--- a/pkg/afancontrol.conf
+++ b/pkg/afancontrol.conf
@@ -120,6 +120,16 @@ max = 40
 # Default: None
 ;threshold_leave_cmd =
 
+[readonly_fan: cpu]
+# A readonly fan: i.e. just read RPM and never attempt to control it.
+# Useful for exposing a CPU fan speed in metrics.
+#
+# The properties are the same as in `[fan: ...]`. Both sections share
+# the same namespace, which means that a single fan name can be used
+# only in one of the sections.
+type = linux
+fan_input = /sys/class/hwmon/hwmon0/device/fan1_input
+
 
 # [fan:name] - is a PWM fan section. The `name` must be unique.
 [fan: hdd]
@@ -129,6 +139,8 @@ max = 40
 #            the motherboard using a 4-pin connector and exposed by lm-sensors
 #            as a file like `/sys/class/hwmon/hwmon0/device/pwm2`.
 #   `arduino`: A PWM fan connected via an Arduino board.
+#   `freeipmi`: A PWM fan exposed via IPMI. Requires `freeipmi-tools` package.
+#               Currently supported only in the `[readonly_fan: ...]` sections.
 # Default: linux
 type = linux
 
@@ -154,6 +166,10 @@ fan_input = /sys/class/hwmon/hwmon0/device/fan2_input
 # Mandatory when `type = arduino`.
 ;tacho_pin = 3
 
+# The name of the fan as reported by the `ipmi-sensors --sensor-types Fan` command.
+# Mandatory when `type = freeipmi`.
+;name = FAN1
+
 # Some fans have almost linear correlation between PWM and RPM, some haven't.
 # `pwm_line_start` is the PWM value where the linear correlation starts,
 # `pwm_line_end` is where it ends.
@@ -169,16 +185,6 @@ pwm_line_end = 240
 # with the `pwm_line_start` PWM value.
 # Default: yes. Must not be set in the `[readonly_fan: ...]` sections.
 never_stop = no
-
-[readonly_fan: cpu]
-# A readonly fan: i.e. just read RPM and never attempt to control it.
-# Useful for exposing a CPU fan speed in metrics.
-#
-# The properties are the same as in `[fan: ...]`. Both sections share
-# the same namespace, which means that a single fan name can be used
-# only in one of the sections.
-type = linux
-fan_input = /sys/class/hwmon/hwmon0/device/fan1_input
 
 # [arduino:name] - a section describing an Arduino board with PWM fans connected to it.
 ;[arduino: mymicro]
