--- a/setup.cfg
+++ b/setup.cfg
@@ -87,7 +87,7 @@ console_scripts =
 arduino =
     pyserial>=3.0
 metrics =
-    prometheus-client
+    prometheus-client>=0.1.0
 dev =
     black==19.10b0; python_version>='3.6'
     coverage==5.1
