--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,6 @@ classifier =
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
@@ -77,7 +76,7 @@ install_requires =
 package_dir =
     = src
 packages = find:
-python_requires = >=3.5
+python_requires = >=3.6
 
 [options.entry_points]
 console_scripts =
@@ -89,7 +88,7 @@ arduino =
 metrics =
     prometheus-client>=0.1.0
 dev =
-    black==19.10b0; python_version>='3.6'
+    black==19.10b0
     coverage==5.1
     flake8==3.7.9
     isort==4.3.21
