config: add `ipmi_sensors` location property

--- a/pkg/afancontrol.conf
+++ b/pkg/afancontrol.conf
@@ -10,9 +10,14 @@ logfile = /var/log/afancontrol.log
 # Default: 5
 interval = 5
 
-# Hddtemp location. Relevant only when there're `type = hdd` temperature sensors.
+# Hddtemp location. Used by the `type = hdd` temperature sensors.
 # Default: hddtemp
 ;hddtemp = /usr/local/bin/hddtemp
+
+# `ipmi-sensors` location from the `freeipmi-tools` package.
+# Used by the `type = freeipmi` fans.
+# Default: ipmi-sensors
+;ipmi_sensors = /usr/local/bin/ipmi-sensors
 
 # Prometheus exporter listening hostname and TCP port.
 # Default: (empty value)
