setup.cfg classifiers: change `4 - Beta` to `5 - Stable`

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,7 @@ line_length = 88
 author = Kostya Esmukov
 author_email = kostya@esmukov.ru
 classifier =
-    Development Status :: 4 - Beta
+    Development Status :: 5 - Production/Stable
     Intended Audience :: System Administrators
     License :: OSI Approved :: MIT License
     Natural Language :: English
