--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,7 @@ classifier =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
     Topic :: System :: Hardware
     Topic :: System :: Monitoring
     Topic :: System :: Systems Administration
