Switch from Travis to GH Actions

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,14 @@ commands = make test
 ; sources to the working dir by default.
 usedevelop = True
 
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    3.10: py310
+
 [testenv:lint]
 extras =
     arduino
