--- a/setup.cfg
+++ b/setup.cfg
@@ -88,14 +88,15 @@ arduino =
 metrics =
     prometheus-client>=0.1.0
 dev =
-    black==20.8b1
-    coverage==5.3
-    flake8==3.8.4
-    isort==5.5.4
-    mypy==0.782
-    pytest==6.1.0
+    black==21.8b0
+    coverage==5.5
+    flake8==3.9.2
+    isort==5.9.3
+    mypy==0.910
+    pytest==6.2.5
     requests
-    sphinx==3.2.1
+    sphinx==4.1.2
+    types-requests
     wheel
 
 [options.packages.find]
