--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,10 +38,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
         experimental: [false]
         include:
-          - python-version: '3.10-dev'
+          - python-version: "3.12-dev"
             experimental: true
     steps:
     - uses: actions/checkout@v2
