--- a/setup.cfg
+++ b/setup.cfg
@@ -84,16 +84,16 @@ arduino =
 metrics =
     prometheus-client>=0.1.0
 dev =
-    black==21.8b0
-    coverage==5.5
-    flake8==3.9.2
-    isort==5.9.3
-    mypy==0.910
-    pytest==6.2.5
+    black==22.10.0
+    coverage==6.5.0
+    flake8==5.0.4
+    isort==5.10.1
+    mypy==0.990
+    pytest==7.2.0
+    sphinx==4.3.2
+    vcrpy==4.2.1
     requests
-    sphinx==4.1.2
     types-requests
-    wheel
 
 [options.packages.find]
 where = src
