--- a/setup.cfg
+++ b/setup.cfg
@@ -25,13 +25,8 @@ per-file-ignores =
     src/afancontrol/config.py:C901
 
 [isort]
-; https://github.com/timothycrosley/isort#multi-line-output-modes
 multi_line_output = 3
-; https://github.com/ambv/black#how-black-wraps-lines
-include_trailing_comma = True
-force_grid_wrap = 0
-combine_as_imports = True
-line_length = 88
+profile = black
 
 [metadata]
 author = Kostya Esmukov
