Update tox.ini: whitelist_externals -> allowlist_externals

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ extras =
     arduino: arduino
     dev
     metrics: metrics
-whitelist_externals = make
+allowlist_externals = make
 commands = make test
 ; Fix coverage not working because tox doesn't install
 ; sources to the working dir by default.
